line_detection/build/log/idf_py_stdout_output_30747
[1/10] Performing build step for 'bootloader'
[1/1] cd /Users/wangjiaqi/Documents/Github/espruino-wireless-communication/line_detection/build/bootloader/esp-idf/esptool_py && /Users/wangjiaqi/.espressif/python_env/idf5.4_py3.13_env/bin/python /Users/wangjiaqi/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/wangjiaqi/Documents/Github/espruino-wireless-communication/line_detection/build/bootloader/bootloader.bin
Bootloader binary size 0x5220 bytes. 0x2de0 bytes (36%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/line_detection.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/line_detection.c.obj 
/Users/wangjiaqi/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/wangjiaqi/Documents/Github/espruino-wireless-communication/line_detection/build/config -I/Users/wangjiaqi/Documents/Github/espruino-wireless-communication/line_detection/main -I/Users/wangjiaqi/esp/esp-idf/components/newlib/platform_include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/config/include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/config/include/freertos -I/Users/wangjiaqi/esp/esp-idf/components/freertos/config/xtensa/include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/wangjiaqi/esp/esp-idf/components/freertos/esp_additions/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/dma/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/ldo/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/Users/wangjiaqi/esp/esp-idf/components/heap/include -I/Users/wangjiaqi/esp/esp-idf/components/heap/tlsf -I/Users/wangjiaqi/esp/esp-idf/components/log/include -I/Users/wangjiaqi/esp/esp-idf/components/soc/include -I/Users/wangjiaqi/esp/esp-idf/components/soc/esp32s3 -I/Users/wangjiaqi/esp/esp-idf/components/soc/esp32s3/include -I/Users/wangjiaqi/esp/esp-idf/components/soc/esp32s3/register -I/Users/wangjiaqi/esp/esp-idf/components/hal/platform_port/include -I/Users/wangjiaqi/esp/esp-idf/components/hal/esp32s3/include -I/Users/wangjiaqi/esp/esp-idf/components/hal/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_rom/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_rom/esp32s3/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/Users/wangjiaqi/esp/esp-idf/components/esp_rom/esp32s3 -I/Users/wangjiaqi/esp/esp-idf/components/esp_common/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_system/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_system/port/soc -I/Users/wangjiaqi/esp/esp-idf/components/esp_system/port/include/private -I/Users/wangjiaqi/esp/esp-idf/components/xtensa/esp32s3/include -I/Users/wangjiaqi/esp/esp-idf/components/xtensa/include -I/Users/wangjiaqi/esp/esp-idf/components/xtensa/deprecated_include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/include/apps -I/Users/wangjiaqi/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/wangjiaqi/esp/esp-idf/components/lwip/lwip/src/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/freertos/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/wangjiaqi/Documents/Github/espruino-wireless-communication/line_detection/managed_components/espressif__esp32-camera/driver/include -I/Users/wangjiaqi/Documents/Github/espruino-wireless-communication/line_detection/managed_components/espressif__esp32-camera/conversions/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/deprecated -I/Users/wangjiaqi/esp/esp-idf/components/driver/i2c/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/touch_sensor/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/twai/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_pm/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_ringbuf/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_gpio/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_pcnt/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_gptimer/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_spi/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_mcpwm/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_i2s/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_sdmmc/include -I/Users/wangjiaqi/esp/esp-idf/components/sdmmc/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_sdspi/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_sdio/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_dac/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_rmt/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_tsens/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_sdm/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_i2c/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_uart/include -I/Users/wangjiaqi/esp/esp-idf/components/vfs/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_ledc/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_parlio/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/Users/wangjiaqi/Documents/Github/espruino-wireless-communication/line_detection/managed_components/espressif__esp_jpeg/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_timer/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_http_server/include -I/Users/wangjiaqi/esp/esp-idf/components/http_parser -I/Users/wangjiaqi/esp/esp-idf/components/esp_event/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_wifi/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_wifi/include/local -I/Users/wangjiaqi/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_phy/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_phy/esp32s3/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_netif/include -I/Users/wangjiaqi/esp/esp-idf/components/nvs_flash/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_partition/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/wangjiaqi/Documents/Github/espruino-wireless-communication/line_detection=. -fmacro-prefix-map=/Users/wangjiaqi/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/line_detection.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/line_detection.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/line_detection.c.obj -c /Users/wangjiaqi/Documents/Github/espruino-wireless-communication/line_detection/main/line_detection.c
/Users/wangjiaqi/Documents/Github/espruino-wireless-communication/line_detection/main/line_detection.c: In function 'app_main':
/Users/wangjiaqi/Documents/Github/espruino-wireless-communication/line_detection/main/line_detection.c:236:65: error: passing argument 6 of 'xTaskCreate' makes pointer from integer without a cast [-Wint-conversion]
  236 |     xTaskCreate(find_line_task, "find line", 2048 * 5, NULL, 4, 1);
      |                                                                 ^
      |                                                                 |
      |                                                                 int
In file included from /Users/wangjiaqi/esp/esp-idf/components/freertos/esp_additions/include/freertos/idf_additions.h:20,
                 from /Users/wangjiaqi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:1533,
                 from /Users/wangjiaqi/esp/esp-idf/components/esp_http_server/include/esp_http_server.h:12,
                 from /Users/wangjiaqi/Documents/Github/espruino-wireless-communication/line_detection/main/line_detection.c:8:
/Users/wangjiaqi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/task.h:376:50: note: expected 'struct tskTaskControlBlock ** const' but argument is of type 'int'
  376 |                             TaskHandle_t * const pxCreatedTask ) PRIVILEGED_FUNCTION
      |                             ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
